@@ -2,17 +2,16 @@ package com.purbon.kafka.topology;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.purbon.kafka.topology.model.JulieRole;
-import com.purbon.kafka.topology.model.JulieRoleAcl;
-import com.purbon.kafka.topology.model.JulieRoles;
-import com.purbon.kafka.topology.model.PlanMap;
-import com.purbon.kafka.topology.model.Topology;
+import com.purbon.kafka.topology.model.*;
+import com.purbon.kafka.topology.model.users.MirrorMaker2;
 import com.purbon.kafka.topology.model.users.Other;
 import com.purbon.kafka.topology.serdes.JulieRolesSerdes;
 import com.purbon.kafka.topology.serdes.TopologySerdes;
 import com.purbon.kafka.topology.utils.JinjaUtils;
 import com.purbon.kafka.topology.utils.TestUtils;
 import java.io.IOException;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -85,8 +84,10 @@ public class JulieRolesTest {
     TopologySerdes topologySerdes =
         new TopologySerdes(new Configuration(), TopologySerdes.FileType.YAML, new PlanMap());
     Topology topology =
-        topologySerdes.deserialise(TestUtils.getResourceFile("/descriptor-mirrormaker.yaml"));
-    var project = topology.getProjects().getFirst();
+        topologySerdes.deserialise(
+            TestUtils.getResourceFile("/descriptor-mirrormaker-source.yaml"));
+
+    var project = topology.getProjects().get(0);
     for (Map.Entry<String, List<Other>> entry : project.getOthers().entrySet()) {
       if (!entry.getKey().equals("app")) {
         continue;
@@ -154,23 +155,52 @@ public class JulieRolesTest {
 
   @Test
   public void testMirrorMakerRole() throws IOException {
-    JulieRoles roles = parser.deserialise(TestUtils.getResourceFile("/roles-mirrormaker.yaml"));
-    TopologySerdes topologySerdes = new TopologySerdes();
-    Topology topology =
-        topologySerdes.deserialise(TestUtils.getResourceFile("/descriptor-mirrormaker.yaml"));
-    roles.validateTopology(topology);
-    var expected =
+    JulieRoles mmRoles = parser.deserialise(TestUtils.getResourceFile("/roles-mirrormaker.yaml"));
+    JulieRoles topicRoles =
+        parser.deserialise(TestUtils.getResourceFile("/roles-with-default-allow.yaml"));
+    JulieRoles roles = mmRoles.merge(topicRoles);
+
+    TopologySerdes topologySerdesSource = new TopologySerdes();
+    TopologySerdes topologySerdesTarget = new TopologySerdes();
+
+    Topology sourceTopology =
+        topologySerdesSource.deserialise(
+            TestUtils.getResourceFile("/descriptor-mirrormaker-source.yaml"));
+    Topology targetTopology =
+        topologySerdesTarget.deserialise(
+            TestUtils.getResourceFile("/descriptor-mirrormaker-target.yaml"));
+
+    roles.validateTopology(sourceTopology);
+    roles.validateTopology(targetTopology);
+
+    var expectedSource =
+        new String[] {
+          "test-cluster-status",
+          "test-cluster-offsets",
+          "test-cluster-configs",
+          "source-topic-A",
+          "source-topic-B"
+        };
+
+    var expectedTarget =
         new String[] {
           "test-cluster-status",
           "test-cluster-offsets",
           "test-cluster-configs",
           "target-prefix.",
           "mm2-offset-syncs.test-mm.internal",
-          "test-mm.checkpoints.internal"
+          "test-mm.checkpoints.internal",
+          "source-topic-A",
+          "source-topic-B"
         };
-    var mirrorMaker = topology.getProjects().getFirst().getOthers().get("mirrorMaker").getFirst();
-    var topics = mirrorMaker.asMap().values();
-    for (String t : expected) {
+
+    MirrorMaker2 mirrorMaker = sourceTopology.getProjects().get(0).getMirrorMakers().get(0);
+    List<Topic> sourceTopics = sourceTopology.getProjects().get(0).getTopics();
+
+    Collection<Object> topics = Collections.singleton(mirrorMaker.getAllTopics());
+    topics.addAll(sourceTopics);
+
+    for (String t : expectedSource) {
       Assert.assertTrue(topics.contains(t));
     }
   }
